# BattleSim

./: README.md
battleship/: README.md  pyproject.toml  ui.py
battleship/output/: player1_move.md  player2_move.md
battleship/src/battleship/: board.py  crew.py  main.py
battleship/src/battleship/config/: agents.yaml  tasks.yaml
battleship/src/battleship/tools/: custom_tool.py
battleship/static/: script.js  style.css
battleship/templates/: index.html
