[project]
name = "battleship"
version = "0.1.0"
description = "battleship using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
battleship = "battleship.main:run"
run_crew = "battleship.main:run"
train = "battleship.main:train"
replay = "battleship.main:replay"
test = "battleship.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
